@@ -44,9 +44,11 @@ Version 1.3.6+svn:
      observing (bug #9610)
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
-   * new extra_defines key to define in campaigns some other preprocessor
+   * new tag [filter_radius] to allow greater control over radius expansion
+     when using the standard location filter
+   * new extra_defines= key to define in campaigns some other preprocessor
      symbol *before* the files are repreprocessed
-   * fog and shroud tiles are defined by the terrainWML instead of game_config
+   * fog and shroud tiles are now defined by the TerrainWML (not [game_config])
  * team color
    * allow color ranges to be defined on-the-fly (like color palettes)
    * now [side] colour=<string> is valid (previously only int)
